--- a/static/src/theme.scss
+++ b/static/src/theme.scss
@@ -45,6 +45,7 @@ p, ul, ol {
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 700;
 	line-height: 1.25;
+	margin: $heading-margin;
 }
 
 h1 {font-size: 3em; text-align: center;}
