added some comments, renamed some files

--- a/static/src/master.scss
+++ b/static/src/master.scss
@@ -1,5 +1,5 @@
 @import 'normalize.css/normalize';
-@import './globals';
+@import './settings';
 @import './theme';
 @import './location/style';
 @import './location-collection/style';
